# gachit

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: auto_approve_for_code_owner.yaml
playground/: README.md
src/e2e_test/: add_test.py  cat_file_test.py  commit_test.py  new_branch_test.py  tree_serializer_test.py
src/gachit/: __init__.py  __main__.py  exception.py
src/gachit/domain/entity/: __init__.py  blob.py  commit.py  diff.py  error.py  index.py  mode.py  ref.py  repository.py  sha.py  tree.py  user.py
src/gachit/domain/service/: __init__.py  build_tree.py  commit_tree.py  common_ancestor.py  diff.py  hash_object.py  migrate.py
src/gachit/domain/service/diff/: __init__.py  index_to_tree.py  tree_to_tree.py  workspace_to_index.py
src/gachit/e2e_test/: conftest.py
src/gachit/io/: index.py  ref.py  user.py  workspace.py
src/gachit/io/database/: __init__.py  blob.py  commit.py  db.py  error.py  object_header.py  read_object.py  tree.py  types.py  write_object.py
src/gachit/io/serializer/: __init__.py  blob.py  commit.py  index.py  tree.py
src/gachit/io/user/: __init__.py
src/gachit/io/workspace/: __init__.py
src/gachit/presentation/: __init__.py  cat_file.py
src/gachit/usecase/: __init__.py  add.py  cat_file.py  checkout.py  commit.py  merge.py  switch.py
src/tests/: add_test.py  cat_file_test.py  checkout_test.py  commit_test.py  common_ancestor_test.py  conftest.py  merge_test.py  new_branch_test.py  tree_diff_test.py  tree_serializer_test.py
