[project]
name = "gachit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "umepon0626", email = "ryuichiastrona@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]


[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true


[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gachit"]
