[project]
name = "gachit"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "umepon0626", email = "ryuichiastrona@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"gachit" = "gachit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
show_error_context = true
show_column_numbers = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true 

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E501", "F", "I"]


[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true


[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.6",
    "pre-commit>=3.8.0",
    "mypy>=1.11.1",
    "types-click>=7.1.8",
    "gitpython>=3.1.43",
    "pytest>=8.3.2",
]

[tool.rye.scripts]
check = "pre-commit run --all-files"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gachit"]
